WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
257373
[MSE][GStreamer] Follow-up for PR-14082: add missing adoptGRef()
https://bugs.webkit.org/show_bug.cgi?id=257373
Summary
[MSE][GStreamer] Follow-up for PR-14082: add missing adoptGRef()
Alicia Boya García
Reported
2023-05-26 03:56:13 PDT
https://github.com/WebKit/WebKit/pull/14082#discussion_r1206445223
Attachments
Add attachment
proposed patch, testcase, etc.
Alicia Boya García
Comment 1
2023-05-26 03:59:44 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/14387
EWS
Comment 2
2023-05-26 05:26:50 PDT
Committed
264578@main
(25db991ccdf8): <
https://commits.webkit.org/264578@main
> Reviewed commits have been landed. Closing PR #14387 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug