[MSE][GStreamer] Follow-up for PR-14082: add missing adoptGRef() https://bugs.webkit.org/show_bug.cgi?id=257373

Reviewed by Philippe Normand.

Adds a missing adoptGRef() pointed out in
https://github.com/WebKit/WebKit/pull/14082#discussion_r1206445223

* Source/WebCore/platform/graphics/gstreamer/GStreamerSinksWorkarounds.cpp:
(WebCore::AppSinkFlushCapsWorkaroundProbe::installIfNeeded):

Canonical link: https://commits.webkit.org/264578@main